@@ -1,9 +1,9 @@
 package forge.game.mulligan;
 
-import com.google.common.collect.ImmutableList;
-
 import forge.game.player.Player;
 import forge.game.zone.ZoneType;
+
+import java.util.List;
 
 public class VancouverMulligan extends ParisMulligan {
     public VancouverMulligan(Player p, boolean firstMullFree) {
@@ -13,7 +13,7 @@ public class VancouverMulligan extends ParisMulligan {
     public void afterMulligan() {
         super.afterMulligan();
         if (player.getStartingHandSize() > player.getZone(ZoneType.Hand).size()) {
-            player.getGame().getAction().scry(ImmutableList.of(player), 1, null);
+            player.getGame().getAction().scry(List.of(player), 1, null);
         }
     }
 }
